--- a/tex/main.tex
+++ b/tex/main.tex
@@ -1255,11 +1255,11 @@ and \texttt{std::weak\_ptr} holds a pointer to a ControlBlock, \texttt{std::shar
 \subsubsection{2 Pointer Palindrome iteration}
 To count up all the palindromes in a string we you can sweep center index \texttt{i} left to right and check for odd palindromes
 \[
-    \texttt{xs[i - a] = xs[i + a]})
+    \texttt{xs[i - a] = xs[i + a]}
 \]
 and even palindrome  
 \[
-    \texttt{xs[i - a] = xs[i + 1 + a]})
+    \texttt{xs[i - a] = xs[i + 1 + a]}
 \]
 in the following way:
 \begin{lstlisting}
