--- a/tex/main.tex
+++ b/tex/main.tex
@@ -1520,6 +1520,14 @@ This is basically THE intro DP / memoization problem. Suppose you start at \text
 
 Idea is to memoize on every position, the value of very position is simply the sum of the value of going right once and of going going down once, this causes a lot of overcounting, with memoization we avoid this overcounting.
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.7\linewidth]{UniquePaths.png}\\[0.3em]
+    \caption{Unique Paths Memoization}
+    \label{fig:problem-unique-paths}
+\end{figure}
+
+
 \begin{lstlisting}
 constexpr auto k_not_init = -1;
 
